--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -51,13 +51,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-<!--        <Button-->
-<!--            android:id="@+id/btnAdd"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="@drawable/btn_add"-->
-<!--            android:text="Add"-->
-<!--            android:textColor="@color/white" />-->
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btnAdd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/pink_nhat"
+            android:src="@drawable/baseline_add_24"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="550dp"
+            />
 
     </RelativeLayout>
 
