--- a/app/src/main/res/layout/update_prd.xml
+++ b/app/src/main/res/layout/update_prd.xml
@@ -37,7 +37,7 @@
                 <CheckBox
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:button="@drawable/image_checkbox"
+                    android:button="@drawable/udt_image_checkbox"
                     android:id="@+id/update_item_new_cb"/>
             </LinearLayout>
             <LinearLayout
@@ -55,7 +55,7 @@
                 <CheckBox
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:button="@drawable/image_checkbox"
+                    android:button="@drawable/udt_image_checkbox"
                     android:id="@+id/update_item_popular_cb"/>
             </LinearLayout>
             <LinearLayout
@@ -72,7 +72,7 @@
                 <CheckBox
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:button="@drawable/image_checkbox"
+                    android:button="@drawable/udt_image_checkbox"
                     android:id="@+id/update_item_sale_cb"/>
             </LinearLayout>
         </LinearLayout>
