--- a/app/src/main/res/layout/update_prd.xml
+++ b/app/src/main/res/layout/update_prd.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginBottom="5dp">
-        <ImageButton
+        <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:id="@+id/update_img"
