--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgr_signup"
+    android:background="@drawable/bgr_signin"
     android:paddingHorizontal="10dp">
 
     <RelativeLayout
@@ -64,6 +64,7 @@
             android:longClickable="false"
             android:paddingRight="10dp"/>
         <Button
+            android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button_sign2"
