--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -84,6 +84,7 @@
             android:id="@+id/name_user"
             android:drawableLeft="@drawable/user"/>
         <Button
+            android:id="@+id/btn_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button_sign2"
