--- a/app/src/main/res/layout/fragment_home_client.xml
+++ b/app/src/main/res/layout/fragment_home_client.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="60dp"
-    tools:context=".StatisticFragment">
+    tools:context=".HomeClientFragment">
 
-    <com.github.mikephil.charting.charts.PieChart
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/piechart"/>
-
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
