--- a/app/src/main/res/layout/activity_check_order_admin.xml
+++ b/app/src/main/res/layout/activity_check_order_admin.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container_item_prd"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".FavoriteClientFragment">
+    android:layout_height="wrap_content"
+    android:background="#FFF8F9"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,13 +13,11 @@
         android:background="@drawable/edit_text2"
         android:padding="5dp">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/mor_perfume"
-            android:layout_centerVertical="true"
-            />
-
+        <Button
+            android:id="@+id/btn_back_udt"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/back_icon" />
 
         <TextView
             android:id="@+id/tv_edt"
@@ -29,17 +25,20 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:padding="7dp"
-            android:text="FAVORITE"
+            android:text="CHECK ORDER"
             android:textColor="#7E7E7E"
             android:textSize="25dp"
             android:textStyle="bold" />
     </RelativeLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rccv_item_prd"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
 
 </LinearLayout>
